--- a/docker/api/pyproject.toml
+++ b/docker/api/pyproject.toml
@@ -13,6 +13,9 @@ mysqlclient = "^2.1.0"
 python-decouple = "^3.5"
 python-multipart = "^0.0.5"
 SQLAlchemy-Utils = "^0.38.2"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+fastapi-csrf-protect = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
